<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Minesweeper</string>
    <string name="action_settings">Settings</string>
    <string name="title">Minesweeper!</string>
    <string name="start_text">Start</string>
    <string name="options_text">Options</string>
    <string name="easy">Easy</string>
    <string name="hard">Hard</string>
    <string name="hs_text">High Scores</string>
    <string name="title_activity_startscreen">StartscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="play_screen">Play Screen</string>
    <string name="mode">Mode</string>
    <string name="title_activity_options">OptionsActivity</string>
    <string name="options">Options</string>
    <string name="title_activity_high_scores">HighScoresActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="IloveAlice">I love Alice!</string>
    <string name="IloveChris">I love Chris!</string>
    <string name="Change6">Changing my clothes6</string>
    <string name="Change4">Changing my clothes4</string>
    <string name="Hello_There">Why Hello There Alice</string>

</resources>
