<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/Title_Message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/title"
        android:textSize="35sp" />

    <Button
        android:id="@+id/Start_Button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Options_Button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:onClick="startGame"
        android:text="@string/start_text" />

    <Button
        android:id="@+id/Options_Button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="options_click"
        android:text="@string/options_text" />

    <Button
        android:id="@+id/HighScores_Button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Options_Button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="highscores_click"
        android:text="@string/hs_text" />

</RelativeLayout>